# Pws

./: .gitignore  CMakeLists.txt  README.md
client/: main.css  main.go  main.html  main.js  stats.css
deamon/: .project_watcher.cc.swp  build.sh  core.cc  core.hpp  deamon  http_server.cc  http_server.hpp  input_watcher.cc  input_watcher.hpp  main.cc  perf.sh  proc_watcher.cc  proc_watcher.hpp  project_watcher.cc  projects_watcher.cc  projects_watcher.hpp  pws_reporter.cc  pws_reporter.hpp  statistic.cc  statistic.hpp
deamon/lib/: .projects_watcher.hpp.swo  core.hpp  core.hpp~  input_watcher.hpp  main.hpp  projects_watcher.hpp
